--- a/Jester/resources/ai/Jester/binks/mapping.json
+++ b/Jester/resources/ai/Jester/binks/mapping.json
@@ -6,15 +6,15 @@
   "anger_1"      : "jester_happy.bik",
   "anger_2"      : "jester_happy.bik",
   "plead"        : "jester_surprised.bik",
-  "nervous_1"    : "surprised_happy.bik",
-  "nervous_2"    : "surprised_happy.bik",
+  "nervous_1"    : "jester_surprised.bik",
+  "nervous_2"    : "jester_surprised.bik",
   "victory_1"    : "jester_happy.bik",
   "victory_2"    : "jester_happy.bik",
   "victory_3"    : "jester_happy.bik",
   "victory_4"    : "jester_happy.bik",
   "request"      : "jester_happy.bik",
   "thanks"       : "jester_happy.bik",
-  "ally_death"   : "surprised_happy.bik",
+  "ally_death"   : "jester_surprised.bik",
   "congrats"     : "jester_happy.bik",
   "boast"        : "jester_happy.bik",
   "help"         : "jester_happy.bik",
@@ -22,11 +22,11 @@
   "siege"        : "jester_happy.bik",
   "no_attack_1"  : "jester_happy.bik",
   "no_attack_2"  : "jester_happy.bik",
-  "no_help_1"    : "surprised_happy.bik",
-  "no_help_2"    : "surprised_happy.bik",
-  "no_sent"      : "surprised_happy.bik",
+  "no_help_1"    : "jester_surprised.bik",
+  "no_help_2"    : "jester_surprised.bik",
+  "no_sent"      : "jester_surprised.bik",
   "sent"         : "jester_happy.bik",
-  "team_losing"  : "surprised_happy.bik",
+  "team_losing"  : "jester_surprised.bik",
   "team_winning" : "jester_happy.bik",
   "help_sent"    : "jester_happy.bik",
   "will_attack"  : "jester_happy.bik"
